Fixed alignments

--- a/main.css
+++ b/main.css
@@ -41,13 +41,17 @@ grid-area: h;
 }
 
 #variations{
+    margin-bottom: 100px;
+    margin-left: 200px;
 grid-area: v;
 display: grid;
 grid-template-columns: 1fr 1fr;
 width: 800px;
+align-content: center;
 }
 
 #alphabet {
+    margin-top: 100px;
 grid-area: a;
 }
 
@@ -61,7 +65,7 @@ grid-area: c;
 }
 /* CSS for the footer */
 footer{
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: -10px;
     background-color: #FFA200;
     height:30px;
@@ -76,6 +80,8 @@ footer{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
 
 .download{
     color: #ffffff;
@@ -97,7 +103,7 @@ footer{
 
 .alphabetter{
     color: #ffffff;
-    font-size: 25px;
+    font-size: 30px;
     font-variation-settings: "wght" 400, "slnt" 0;
     text-align: center;
 }
@@ -107,7 +113,7 @@ h2{
 }
 
 .history-side{
-    transform-origin: rotate(-90deg);
+    transform: rotate(-90deg);
     font-size: 40px;
     color: #FFA200;
     text-align: center;
@@ -117,7 +123,7 @@ h2{
 .axes-side{
     color: #ffffff;
     font-size: 40px;
-    transform-origin: rotate(90deg);
+    transform: rotate(90deg);
     text-align: center;
     text-decoration: underline;
 }
