--- a/navigation.css
+++ b/navigation.css
@@ -9,16 +9,14 @@
   header {
     /* where to set the color of the nav bar */
       background: rgba(0, 0, 0);
-      text-align: center;
       top:-90px;
       z-index: 999;
       width: 100%;
-      text-align: center;
   }
   /* where to change the background color of the pop-up nav bar*/
   nav {
     position: absolute;
-      text-align: center;
+    text-align: center;
       background: #000000;
       width: 100%;
       transform: scale(1,0);
@@ -33,8 +31,7 @@
   }
   
   nav li {
-      margin-bottom: 1em;
-      margin-left: 1em;
+  margin-right: 155px;
   }
   /* where to change the color of the font in the nav bar */
   nav a {
